Enhance archive description with paperback details
Expanded the description of the archive section to include information about paperback editions.

--- a/archive.html
+++ b/archive.html
@@ -145,7 +145,7 @@ iframe {
 
 <div class="container">
     <h1>Archive</h1>
-    <p>Browse previous issues of the newspaper.</p>
+    <p>Browse previous issues of the newspaper. These are all the paperback editions of In the Middle.</p>
 
     <div class="divider"></div>
 
