--- a/test-home-page.html
+++ b/test-home-page.html
@@ -153,30 +153,16 @@ let articles = {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
-                <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">Chapel Council Corner</a></strong></u>
+                <span class="tooltiptext">Recent news from ChapCo! Authors: <i>Ellen Le ('30)</i></span>
             </span>
         </li>
                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_blank" class="article-title">The Council Corner</a></strong></u>
-                <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_blank" class="article-title">Student Council Corner</a></strong></u>
+                <span class="tooltiptext">The hottest news from the Student Council! Author: <i>Gus Ebmeyer ('30)</i></span>
             </span>
         </li>
-                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/stuco-game-night?authuser=1" target="_blank" class="article-title">StuCo Game Night</a></strong></u>
-                <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/echo-hill-trip?authuser=1" target="_blank" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
-                <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/costume-contest?authuser=1" target="_blank" class="article-title">Costume Contest</a></strong></u>
-                <span class="tooltiptext">A contest in the Middle School for the best costumes! Authors: <i>Sara Adibi, Lindsay Ferry</i></span>
-                    </ul>`,
-        author:""
+        author:""`
     },
     opinion: {
         title:"Fun & Games",
@@ -188,7 +174,12 @@ let articles = {
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
             <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
-                <span class="tooltiptext">Various puzzles created by our staff!</span>
+                <span class="tooltiptext">Various puzzles created by our staff! Creators: <i>Ellie Wood ('32), Sunishka Agrawal ('32), and Tess McNeely ('31)</i></span>
+            </span>
+        </li>
+                        <li>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=1" target="_blank" class="article-title">Newspaper Holiday Activities</a></u></strong>
+                <span class="tooltiptext">Fun holiday-themed activities from In The Middle! Creators: <i>Arden Cha, Ava Budreika, Campbell Baird</i></span>
             </span>
         </li>`,
         author:""
@@ -198,30 +189,7 @@ let articles = {
         description:"Scores, team highlights, and spotlights on middle school athletes across all seasonal sports.",
         category:"Section",
         image:"https://resources.finalsite.net/images/f_auto,q_auto,t_image_size_6/v1747664955/episcopalacademypa/m2tmbt97ckopdavsuhx2/athlanding1.jpg",
-        content:` <p class="mb-4">Welcome to the <strong>Sports & Athletics</strong> hub. We provide full game recaps, coach interviews, and look ahead at upcoming match-ups.</p>
-                    <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
-                    <ul class="list-disc pl-5 space-y-1">
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/fall-season-overview?authuser=1" target="_blank" class="article-title">Fall Sports Season Overview</a></u></strong>
-                <span class="tooltiptext">A summary of the EAMS Fall Athletics! Authors: <i>Emme, Maya, Gus</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/ms-girls-tennis?authuser=1" target="_blank" class="article-title">MS Girls Tennis (Team Spotlight)</a></u></strong>
-                <span class="tooltiptext">A dive into the MS Girls Tennis team. Authors: <i>Grace, Campbell, Ava, Florrie</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/girls-volleyball?authuser=1" target="_blank" class="article-title">Girls Volleyball (Team Spotlight)</a></u></strong>
-                <span class="tooltiptext">All about this year's Girls Volleyball team. Authors: <i>Sunishka, Ellie</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/aishaverford-day?authuser=1" target="_blank" class="article-title">AIS/Haverford Day</a></u></strong>
-                <span class="tooltiptext">A full rundown about the events of AIS/Haveford Day and Weekend! (Spoiler: we won!) Authors: <i>Asha, Sara</i></span>
-            </span>
-        </li>
-                    </ul>`,
+        content:`<p>No news here... check out a different section!</p> `,
         author:""
     },
     arts: {
@@ -233,23 +201,18 @@ let articles = {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/newsies?authuser=1" target="_blank" class="article-title">Newsies - The Fall Musical</a></u></strong>
-                <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Eleanor</i></span>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/newsies?authuser=1" target="_blank" class="article-title">Secret Santa Gift Ideas</a></u></strong>
+                <span class="tooltiptext">Gift Ideas for Secret Santa from our Editors. Authors: <i>Leo Wang ('30) and Ellen Le ('30)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/jazz-band?authuser=1" target="_blank" class="article-title">Jazz Band</a></u></strong>
-                <span class="tooltiptext">An overview of the MS Jazz Band. Author: <i>Leo Wang</i></span>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/jazz-band?authuser=1" target="_blank" class="article-title">Winter Concert</a></u></strong>
+                <span class="tooltiptext">Fresh information and news about the MS Winter Concert. Author: <i>Leo Wang ('30), Zach Chen ('30), and Adam Balogun ('30)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/symphonic-band?authuser=1" target="_blank" class="article-title">Symphonic Band</a></u></strong>
-                <span class="tooltiptext">The Symphonic band and everything about it. Authors: <i>Adam, Leo, Zach, Ellen</i></span>
-            </span>
-        </li>
-                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/ms-singers?authuser=1" target="_blank" class="article-title">MS Singers</a></u></strong>
-                <span class="tooltiptext">A summary of the MS Singers. What will they perform? Authors: <i>Grace, Florrie</i></span>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/symphonic-band?authuser=1" target="_blank" class="article-title">Winter Holidays</a></u></strong>
+                <span class="tooltiptext">An overview of many holidays occurring this Winter. Christmas isn't the only one! Author: <i>Ellen Le ('30)</i></span>
             </span>
         </li>
                         
