Updated secret santa link fin

--- a/secretsanta.html
+++ b/secretsanta.html
@@ -120,7 +120,7 @@ The most popular budgets are generally between $20 and $30, but some groups will
     <p>12. - <strong>Fidget Toys.</strong> Although they might be slightly off trend these days, fidget toys can still be fun to use and play around with. Combined with their cheap price and limitless variety, there’s a lot of potential.</p>
     <p>At the end of the day (or more like year!), if Secret Santa gift-giving isn’t up your alley, you can always wait for the real Santa to come along and give you your own special present. Happy Holidays!</p>
     <p style="text-align: center;">
-      <a href="home-page.html">← Back to Home</a>
+      <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle?authuser=1">← Back to Home</a>
     </p>
   </div>
 </body>
