--- a/stuco.html
+++ b/stuco.html
@@ -106,7 +106,7 @@
 The Student Council never stops working hard! Winter is another busy trimester for MS StuCo. The Student Council has to make the annually distributed candy canes for the Middle School to send good wishes before the middle school students depart for break. While everyone in the MS is out in the freezing cold during flex, StuCo doesn’t just hang around in the warmth of Ms. McGill's room!! They’re breaking a sweat running down the halls, printing out tags to attach to the candy canes. Then, they are sent to homerooms and given all around the Middle School. The Student Council continues to spread cheer, no matter what season it is! On behalf of the StuCo, we wish you the happiest holidays and a blessed new year!
     </p>
     <p style="text-align: center;">
-      <a href="home-page.html">← Back to Home</a>
+      <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle?authuser=1">← Back to Home</a>
     </p>
   </div>
 </body>
