Update link to 'Back to Home' in winter concert page

--- a/winter-concert.html
+++ b/winter-concert.html
@@ -110,7 +110,7 @@ On the other hand, the Middle School Orchestra is playing 3 songs as well: In th
 The concert this year fell on December 10th, starting at 6:30 PM. If you didn’t have the opportunity to go to the concert this year, don’t worry—there’s always next year, complete with new songs and experiences to look forward to.
     </p>
     <p style="text-align: center;">
-      <a href="home-page.html">← Back to Home</a>
+      <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/in-the-middle?authuser=1">← Back to Home</a>
     </p>
   </div>
 </body>
