--- a/test-home-page.html
+++ b/test-home-page.html
@@ -118,6 +118,19 @@ header p { font-family: var(--font-secondary); color: #333; }
     content:""; position:absolute; left:50%; transform: translateX(-50%); bottom:-6px;
     border-width:6px; border-style:solid; border-color: var(--color-navy) transparent transparent transparent;
 }
+    .tooltiptext {
+    display: none;
+}
+
+.modal-category {
+    display: block;
+    font-size: 0.75rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+    color: var(--color-green);
+    margin-bottom: 0.25rem;
+}
 </style>
 </head>
 <body class="p-6">
@@ -303,7 +316,10 @@ function loadArticles() {
 function openModal(key){
     const section = articles[key];
     if(!section) return;
-    modalTitle.innerHTML = `<span class="category">${section.category}</span> ${section.title}`;
+modalTitle.innerHTML = `
+  <span class="modal-category">${section.category}</span>
+  ${section.title}
+`;
     modalBody.innerHTML = section.content;
     modal.classList.add('active');
     document.body.style.overflow='hidden';
