Update to checkUnumble function
This adds an update to the checkUnjumble function to make the answer case-insensitive, rather than requiring all capital letters.
Bugfix att. 1 --

--- a/puzzles.html
+++ b/puzzles.html
@@ -274,7 +274,21 @@ function loadUnjumble() {
 
 function checkUnjumble() {
     const guess = document.getElementById("guess").value.trim().toUpperCase();
+    const answer = UNJUMBLES[currentUnjumble].answer.toUpperCase(); // Convert answer to uppercase for comparison
     const result = document.getElementById("unjumbleResult");
+
+    if (guess === answer) { // Case-insensitive comparison
+        result.textContent = "Correct!";
+        result.style.color = "green";
+        setTimeout(() => {
+            currentUnjumble = (currentUnjumble + 1) % UNJUMBLES.length;
+            loadUnjumble();
+        }, 800);
+    } else {
+        result.textContent = "Try again.";
+        result.style.color = "red";
+    }
+}
 
     if (guess === UNJUMBLES[currentUnjumble].answer) {
         result.textContent = "Correct!";
