Fixed Button Functionality
Added functionality so that all buttons will initiate a window.open function rather than just an href. Will be applied to all articles files.

--- a/test-home-page.html
+++ b/test-home-page.html
@@ -174,9 +174,8 @@ let articles = {
             <li>
                 <span class="tooltip">
                     <u><strong>
-                        <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/chapel-council-corner?authuser=0"
-                           target="_blank"
-                           class="article-title">
+                        <a href="#"
+                           class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/chapel-council-corner?authuser=0">
                            Chapel Council Corner
                         </a>
                     </strong></u>
@@ -189,9 +188,8 @@ let articles = {
             <li>
                 <span class="tooltip">
                     <u><strong>
-                        <a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/student-council-corner?authuser=0"
-                           target="_blank"
-                           class="article-title">
+                        <a href="#"
+                           class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/student-council-corner?authuser=0">
                            Student Council Corner
                         </a>
                     </strong></u>
@@ -213,12 +211,12 @@ let articles = {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=0" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
+            <span class="tooltip"><strong><u><a href="#" class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=0">Crossword/Wordsearch and other Puzzles</a></u></strong>
                 <span class="tooltiptext">Various puzzles created by our staff! Creators: <i>Ellie Wood ('32), Sunishka Agrawal ('32), and Tess McNeely ('31)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/holiday-activities?authuser=0" target="_blank" class="article-title">Newspaper Holiday Activities</a></u></strong>
+            <span class="tooltip"><strong><u><a href="#" class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/holiday-activites?authuser=0">Newspaper Holiday Activities</a></u></strong>
                 <span class="tooltiptext">Fun holiday-themed activities from In The Middle! Creators: <i>Arden Cha, Ava Budreika, Campbell Baird</i></span>
             </span>
         </li>
@@ -242,17 +240,17 @@ let articles = {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/secret-santa-ideas?authuser=0" target="_blank" class="article-title">Secret Santa Gift Ideas</a></u></strong>
+            <span class="tooltip"><strong><u><a href="#" class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/art-and-culture/secret-santa-ideas?authuser=0">Secret Santa Gift Ideas</a></u></strong>
                 <span class="tooltiptext">Gift Ideas for Secret Santa from our Editors. Authors: <i>Leo Wang ('30) and Ellen Le ('30)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/winter-concert?authuser=0" target="_blank" class="article-title">Winter Concert</a></u></strong>
+            <span class="tooltip"><strong><u><<a href="#" class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/art-and-culture/winter-concert?authuser=0">Winter Concert</a></u></strong>
                 <span class="tooltiptext">Fresh information and news about the MS Winter Concert. Author: <i>Leo Wang ('30), Zach Chen ('30), and Adam Balogun ('30)</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/winter-holidays?authuser=0" target="_blank" class="article-title">Winter Holidays</a></u></strong>
+            <span class="tooltip"><strong><u><a href="#" class="article-title article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/art-and-culture/winter-holidays?authuser=0">Winter Holidays</a></u></strong>
                 <span class="tooltiptext">An overview of many holidays occurring this Winter. Christmas isn't the only one! Author: <i>Ellen Le ('30)</i></span>
             </span>
         </li>
@@ -296,8 +294,8 @@ let articles = {
         </p>
 
         <a 
-            href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/archive?authuser=0" 
-            class="text-light-blue underline font-semibold hover:text-navy"
+            href="#" 
+            class="text-light-blue underline font-semibold hover:text-navy article-link" data-url="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/archive?authuser=0"
         >
             Go to the full archive →
         </a>
@@ -417,6 +415,19 @@ document.addEventListener('pointerdown', e => {
         closeModal();
     }
 });
+        document.addEventListener("DOMContentLoaded", () => {
+      // Get all article links
+      const articleLinks = document.querySelectorAll(".article-link");
+      
+      articleLinks.forEach(link => {
+        link.addEventListener("click", (e) => {
+          e.preventDefault(); // Prevent default anchor tag behavior
+          const url = link.getAttribute("data-url"); // Get the article URL
+          const newWindow = window.open(url, "_blank"); // Open in a new tab
+          newWindow.opener = window; // Set the opener (allows `window.close` later)
+        });
+      });
+    });
 </script>
 </body>
 </html>
