Update title for holiday activities page

--- a/holidayactivities.html
+++ b/holidayactivities.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MS Girls Volleyball | In The Middle</title>
+  <title>MS Holiday Activities | In The Middle</title>
   <style>
     .author {
   font-family: "Merriweather", serif;
