Added CookieDrive html function
Added functionality for Cookie Drive html file on homepage

--- a/test-home-page.html
+++ b/test-home-page.html
@@ -199,6 +199,12 @@ let articles = {
                 </span>
             </li>
         </ul>
+                                 <li>
+            <span class="tooltip"><strong><u><a href="cookiedrive.html" class="article-title article-link" rel="noopener noreferrer">MS Cookie Drive</a></u></strong>
+                <span class="tooltiptext">All about the MS Cookie Drive. Author: <i>Sara Adibi ('31)</i></span>
+            </span>
+        </li>
+                   
     `,
     author: ""
 },
@@ -220,7 +226,7 @@ let articles = {
                 <span class="tooltiptext">Fun holiday-themed activities from In The Middle! Creators: <i>Arden Cha, Ava Budreika, Campbell Baird</i></span>
             </span>
         </li>
-                    </ul>`,
+ </ul>`,
         author: ""
     },
     athletics: {
