Update 404 page with link and contact information
Added a link to the GitHub repository and a contact message.

--- a/404.html
+++ b/404.html
@@ -47,6 +47,7 @@
 
 <body>
   <h1>404 – Page Not Found</h1>
-  <p>This article as either been moved, archived, or you've gone to the wrong URL. Check the web address you've typed in, or the status of the repo at <strong>github.com/TheEd31/in-the-middle</strong> for more information.</p>
+  <p>This article as either been moved, archived, or you've gone to the wrong URL. Check the web address you've typed in, or the status of the repo at <strong><a href="github.com/TheEd31/in-the-middle">github.com/TheEd31/in-the-middle</a></strong> for more information.</p>
+<p>If you've found an issue, please contact our editors.</p>
 </body>
 </html>
