Add Holiday 2025-26 Edition section to archive

--- a/archive.html
+++ b/archive.html
@@ -158,6 +158,13 @@ iframe {
         </button>
     </div>
 
+     <div class="issue">
+        <h2>Holiday 2025-26 Edition</h2>
+        <p>The Holiday 2025-2026 Edition of ITM, includes colored holiday formatting.</p>
+        <button onclick="openPDF('https://drive.google.com/file/d/1cpQL68lyHUJgwwSdEUjMMflS1yvIMx9U/preview')">
+            Go to Edition →
+        </button>
+    </div>
     <!-- ADD MORE ISSUES BELOW -->
 </div>
 
