--- a/home-page.html
+++ b/home-page.html
@@ -302,27 +302,27 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                        <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_blank" class="article-title">The Council Corner</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">The Council Corner</a></strong></u>
                 <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/stuco-game-night?authuser=1" target="_blank" class="article-title">StuCo Game Night</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">StuCo Game Night</a></strong></u>
                 <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/echo-hill-trip?authuser=1" target="_blank" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
                 <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/costume-contest?authuser=1" target="_blank" class="article-title">Costume Contest</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Costume Contest</a></strong></u>
                 <span class="tooltiptext">A contest in the Middle School for the best costumes! Authors: <i>Sara Adibi, Lindsay Ferry</i></span>
                     </ul>
                 `,
@@ -338,7 +338,7 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/fun-games/puzzles?authuser=1" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Crossword/Wordsearch and other Puzzles</a></u></strong>
                 <span class="tooltiptext">Various puzzles created by our staff!</span>
             </span>
         </li>
@@ -357,22 +357,22 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/fall-season-overview?authuser=1" target="_blank" class="article-title">Fall Sports Season Overview</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Fall Sports Season Overview</a></u></strong>
                 <span class="tooltiptext">A summary of the EAMS Fall Athletics! Authors: <i>Emme, Maya, Gus</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/ms-girls-tennis?authuser=1" target="_blank" class="article-title">MS Girls Tennis (Team Spotlight)</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">MS Girls Tennis (Team Spotlight)</a></u></strong>
                 <span class="tooltiptext">A dive into the MS Girls Tennis team. Authors: <i>Grace, Campbell, Ava, Florrie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/girls-volleyball?authuser=1" target="_blank" class="article-title">Girls Volleyball (Team Spotlight)</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Girls Volleyball (Team Spotlight)</a></u></strong>
                 <span class="tooltiptext">All about this year's Girls Volleyball team. Authors: <i>Sunishka, Ellie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/sports-athletics/aishaverford-day?authuser=1" target="_blank" class="article-title">AIS/Haverford Day</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">AIS/Haverford Day</a></u></strong>
                 <span class="tooltiptext">A full rundown about the events of AIS/Haveford Day and Weekend! (Spoiler: we won!) Authors: <i>Asha, Sara</i></span>
             </span>
         </li>
@@ -390,22 +390,22 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                        <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/newsies?authuser=1" target="_blank" class="article-title">Newsies - The Fall Musical</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Newsies - The Fall Musical</a></u></strong>
                 <span class="tooltiptext">The MS Fall Musical; here's what you need to know! Authors: <i>Eleanor</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/jazz-band?authuser=1" target="_blank" class="article-title">Jazz Band</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Jazz Band</a></u></strong>
                 <span class="tooltiptext">An overview of the MS Jazz Band. Author: <i>Leo Wang</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/symphonic-band?authuser=1" target="_blank" class="article-title">Symphonic Band</a></u></strong>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">Symphonic Band</a></u></strong>
                 <span class="tooltiptext">The Symphonic band and everything about it. Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/arts-and-culture/ms-singers?authuser=1" target="_blank" class="article-title">MS Singers</a></u></strong>
+            <span class="tooltip"><strong><u><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/404" target="_blank" class="article-title">MS Singers</a></u></strong>
                 <span class="tooltiptext">A summary of the MS Singers. What will they perform? Authors: <i>Grace, Florrie</i></span>
             </span>
         </li>
